--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 server.port=8081
 spring.servlet.multipart.max-file-size=50MB
+
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+spring.datasource.url=jdbc:mariadb://localhost:3306/userprofile?createDatabaseIfNotExist=true
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.username=myadmin
+spring.datasource.password=a1234
+spring.jpa.hibernate.ddl-auto=create-drop
